--- a/src/main/resources/static/about.html
+++ b/src/main/resources/static/about.html
@@ -10,11 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>About | mini-SurveyMonkey</title>
-    <link rel="icon" href="logo/icon.png">
+    <title>About Us | MiniSurveyMonkey</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script src="your-unique-app.js"></script>
 </head>
 
 <body>
@@ -22,19 +21,18 @@
     <nav class="py-2 bg-light border-bottom">
         <div class="container d-flex flex-wrap">
             <ul class="nav me-auto">
-                <li class="nav-item"><a href="index.html" class="nav-link link-dark px-2">Home</a></li>
-                <li class="nav-item"><a href="./about.html" class="nav-link link-dark px-2 active"
-                                        aria-current="page">About</a></li>
+                <li class="nav-item"><a href="your-unique-index.html" class="nav-link link-dark px-2">Home</a></li>
+                <li class="nav-item"><a href="./your-unique-about.html" class="nav-link link-dark px-2 active"
+                                        aria-current="page">About Us</a></li>
             </ul>
             <ul class="nav">
-                <li class="nav-item"><a href="user.html" class="nav-link link-dark px-2">User</a></li>
-                <li class="nav-item"><a href="surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
-
+                <li class="nav-item"><a href="your-unique-user.html" class="nav-link link-dark px-2">User</a></li>
+                <li class="nav-item"><a href="your-unique-surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
             </ul>
         </div>
     </nav>
     <h1 class='display-5 text-center mt-3 pt-3'>About Us</h1>
-    <p class='text-center mt-3 pt-3'>Refer to our github page for more information: <a href="https://github.com/wmajbour/MiniSurveyMonkey">https://github.com/wmajbour/MiniSurveyMonkey</a></p>
+    <p class='text-center mt-3 pt-3'>Refer to our GitHub page for more information: <a href="https://github.com/wmajbour/MiniSurveyMonkey">https://github.com/wmajbour/MiniSurveyMonkey</a></p>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
