--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -10,9 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>mini-SurveyMonkey</title>
-    <link rel="icon" href="logo/icon.png">
-
+    <title>Mini-SurveyMonkey</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="app.js"></script>
 </head>
@@ -29,23 +27,23 @@
             <ul class="nav">
                 <li class="nav-item"><a href="user.html" class="nav-link link-dark px-2">User</a></li>
                 <li class="nav-item"><a href="surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
-
             </ul>
         </div>
     </nav>
 
-    <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold">Welcome to mini-SurveyMonkey!</h1>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <a type="button" class="btn btn-primary btn-lg px-4 gap-3" href="user.html">I'm a User</a>
-                <a type="button" class="btn btn-outline-secondary btn-lg px-4" href="surveyor.html">I'm the Surveyor</a>
-            </div>
+    <div class="container px-4 py-5 my-5 text-center">
+        <h1 class="display-5 fw-bold">Welcome to Mini-SurveyMonkey!</h1>
+        <p class="lead">Your platform for quick and efficient surveys.</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a type="button" class="btn btn-primary btn-lg px-4 gap-3" href="user.html">I'm a User</a>
+            <a type="button" class="btn btn-outline-secondary btn-lg px-4" href="surveyor.html">I'm the Surveyor</a>
         </div>
     </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous">
 </script>
 </body>
 
