--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -10,11 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>User | mini-SurveyMonkey</title>
-    <link rel="icon" href="logo/icon.png">
+    <title>Your Unique Page | Mini-Survey Platform</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="user.js"></script>
+    <script src="your-unique-script.js"></script>
 </head>
 
 <body>
@@ -22,19 +21,22 @@
     <nav class="py-2 bg-light border-bottom">
         <div class="container d-flex flex-wrap">
             <ul class="nav me-auto">
-                <li class="nav-item"><a href="index.html" class="nav-link link-dark px-2 active"
+                <li class="nav-item"><a href="your-unique-index.html" class="nav-link link-dark px-2 active"
                                         aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link link-dark px-2">About</a></li>
+                <li class="nav-item"><a href="your-unique-about.html" class="nav-link link-dark px-2">About</a></li>
             </ul>
             <ul class="nav">
-                <li class="nav-item"><a href="./user.html" class="nav-link link-dark px-2">User</a></li>
-                <li class="nav-item"><a href="surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
-
+                <li class="nav-item"><a href="./your-unique-user.html" class="nav-link link-dark px-2">User</a></li>
+                <li class="nav-item"><a href="your-unique-surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
             </ul>
         </div>
     </nav>
 
-    <div class="surveyForm"></div>
+    <div class="container px-4 py-5 my-5 text-center">
+        <h1 class="display-5 fw-bold">Welcome to Mini-SurveyMonkey!</h1>
+        <p class="lead">This is a customized message for users on their unique page.</p>
+        <div class="your-unique-surveyForm"></div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
