--- a/src/main/resources/static/about.html
+++ b/src/main/resources/static/about.html
@@ -21,13 +21,13 @@
     <nav class="py-2 bg-light border-bottom">
         <div class="container d-flex flex-wrap">
             <ul class="nav me-auto">
-                <li class="nav-item"><a href="your-unique-index.html" class="nav-link link-dark px-2">Home</a></li>
-                <li class="nav-item"><a href="./your-unique-about.html" class="nav-link link-dark px-2 active"
+                <li class="nav-item"><a href="home.html" class="nav-link link-dark px-2">Home</a></li>
+                <li class="nav-item"><a href="./about.html" class="nav-link link-dark px-2 active"
                                         aria-current="page">About Us</a></li>
             </ul>
             <ul class="nav">
-                <li class="nav-item"><a href="your-unique-user.html" class="nav-link link-dark px-2">User</a></li>
-                <li class="nav-item"><a href="your-unique-surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
+                <li class="nav-item"><a href="user.html" class="nav-link link-dark px-2">User</a></li>
+                <li class="nav-item"><a href="surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
             </ul>
         </div>
     </nav>
