--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -20,7 +20,7 @@
     <nav class="py-2 bg-light border-bottom">
         <div class="container d-flex flex-wrap">
             <ul class="nav me-auto">
-                <li class="nav-item"><a href="./index.html" class="nav-link link-dark px-2 active"
+                <li class="nav-item"><a href="./home.html" class="nav-link link-dark px-2 active"
                                         aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link link-dark px-2">About</a></li>
             </ul>
