Adjusted some HTML Components

--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -13,7 +13,7 @@
     <title>Your Unique Page | Mini-Survey Platform</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="your-unique-script.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -21,13 +21,13 @@
     <nav class="py-2 bg-light border-bottom">
         <div class="container d-flex flex-wrap">
             <ul class="nav me-auto">
-                <li class="nav-item"><a href="your-unique-index.html" class="nav-link link-dark px-2 active"
+                <li class="nav-item"><a href="home.html" class="nav-link link-dark px-2 active"
                                         aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="your-unique-about.html" class="nav-link link-dark px-2">About</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link link-dark px-2">About</a></li>
             </ul>
             <ul class="nav">
-                <li class="nav-item"><a href="./your-unique-user.html" class="nav-link link-dark px-2">User</a></li>
-                <li class="nav-item"><a href="your-unique-surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
+                <li class="nav-item"><a href="./user.html" class="nav-link link-dark px-2">User</a></li>
+                <li class="nav-item"><a href="./surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
             </ul>
         </div>
     </nav>
@@ -35,7 +35,7 @@
     <div class="container px-4 py-5 my-5 text-center">
         <h1 class="display-5 fw-bold">Welcome to Mini-SurveyMonkey!</h1>
         <p class="lead">This is a customized message for users on their unique page.</p>
-        <div class="your-unique-surveyForm"></div>
+        <div class="surveyForm"></div>
     </div>
 </div>
 
