--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -2,49 +2,96 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
     <title>Mini-SurveyMonkey</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css"> <!-- Create a styles.css file for custom styles -->
+    <!-- Add the Google Fonts link for Poppins font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            font-family: 'Poppins', sans-serif; /* Use a custom font */
+        }
+
+        main {
+            flex: 1;
+        }
+
+        .center-image {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 70vh; /* Adjust the height as needed */
+        }
+
+        .footer {
+            background-color: #343a40; /* Dark color matching the navbar */
+            color: white;
+        }
+    </style>
 </head>
 
-<body>
-<div>
-    <nav class="py-2 bg-light border-bottom">
-        <div class="container d-flex flex-wrap">
-            <ul class="nav me-auto">
-                <li class="nav-item"><a href="./home.html" class="nav-link link-dark px-2 active"
-                                        aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link link-dark px-2">About</a></li>
-            </ul>
-            <ul class="nav">
-                <li class="nav-item"><a href="user.html" class="nav-link link-dark px-2">User</a></li>
-                <li class="nav-item"><a href="surveyor.html" class="nav-link link-dark px-2">Surveyor</a></li>
+<body class="bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <!-- Removed "Mini-SurveyMonkey," "User," and "Surveyor" from the navbar -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+                <!-- Centered the remaining items -->
+                <li class="nav-item"><a href="./home.html" class="nav-link active" aria-current="page">Home</a>
+                </li>
+                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
             </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <div class="container px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold">Welcome to Mini-SurveyMonkey!</h1>
+<main class="bg-primary text-white text-center py-5">
+    <div class="container">
+        <h1 class="display-4 fw-bold">Welcome to Mini-SurveyMonkey!</h1>
         <p class="lead">Your platform for quick and efficient surveys.</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a type="button" class="btn btn-primary btn-lg px-4 gap-3" href="user.html">I'm a User</a>
-            <a type="button" class="btn btn-outline-secondary btn-lg px-4" href="surveyor.html">I'm the Surveyor</a>
+        <a class="btn btn-light btn-lg mx-2" href="user.html">I'm a User</a>
+        <a class="btn btn-outline-light btn-lg mx-2" href="surveyor.html">I'm the Surveyor</a>
+    </div>
+</main>
+
+<div class="center-image">
+    <img src="https://clipart-library.com/image_gallery2/Gorilla-Free-PNG-Image.png"
+         class="img-fluid" alt="SurveyMonkey Image">
+</div>
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-6 text-center">
+            <h2>Easy to Use</h2>
+            <p>Our platform is designed to be user-friendly, making it easy for both users and surveyors to
+                navigate and utilize its features.</p>
+        </div>
+        <div class="col-md-6 text-center">
+            <h2>Quick Surveys</h2>
+            <p>With Mini-SurveyMonkey, you can create and respond to surveys quickly, saving time for both
+                surveyors and participants.</p>
         </div>
     </div>
 </div>
 
+<footer class="footer text-center py-3">
+    <p>&copy; 2023 Mini-SurveyMonkey. All rights reserved.</p>
+</footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous">
-</script>
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
